# ruyi-workbench-oss

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  facts.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: e2e.yml
dev-harness/: README.md  acc-offline-installer.static.e2e.js  adaptive-budget.e2e.js  adversarial-w21.e2e.js  agent-deadlock-watchdog.e2e.js  agent-loop.e2e.js  agent-parent-heartbeat.e2e.js  agent-quality-gates.e2e.js  agent-quality-workflow.e2e.js  agent-role-openai.e2e.js  agent-roles.e2e.js  agent-steer-node.e2e.js  agent-subturn-loop-guard.e2e.js  agent-team-budget.static.e2e.js  agent-team-mode.e2e.js  agent-workflow-audit-fixes.e2e.js  agent-workflow-budget-finalizer.e2e.js  agent-workflow-claude-engine.e2e.js  agent-workflow-claude-transient-repro.e2e.js  agent-workflow-editor-ui.e2e.js  agent-workflow-monitor-ui.e2e.js  agent-workflow-templates.e2e.js  agent-workflow-transient-repro.e2e.js  agent-workflow-ui-progress.e2e.js  agent-worktree.e2e.js  artifacts.e2e.js  audit-w23.e2e.js  audit.e2e.js  auth-deny-default.e2e.js  autocompact.e2e.js  autonomy-benchmark.e2e.js  autonomy-durability.e2e.js  autonomy-grant.e2e.js  autonomy-pause.e2e.js  autonomy-resume.e2e.js  autonomy-shell-sandbox.e2e.js  boot-resume-parallel.e2e.js  bridge-cancel-timeout.e2e.js  bridged-prefix-tolerance.e2e.js  bridged-read-noprompt.e2e.js  (+138 more)
dev-harness/lib/: port-audit.js
dev-harness/prompt-benchmark/: README.md  baseline.json  run.js  seeds.json
dev-harness/unit/: port-audit.test.js  render-md.test.js  sanitize.test.js  stream-patch.test.js  strip-comments.test.js
docs/: AUTONOMY-PLAN.md  OPTIMIZATION-ROADMAP.md  README.md  STATIC-LOCK-AUDIT.md  TEAM-MODE-V2-DESIGN.md  UI-DESIGN-P3-WORKBENCH.md  UI-DESIGN-R2-NOTES.md  UI-DESIGN-V3.md  UI-DESIGN-V4.md  UI-VNEXT-CONCEPT.md  WAVE31-SHELL-SANDBOX-DESIGN.md  WAVE33-AUTH-DESIGN.md
docs/archive/: AUTONOMY-PLAN.md  README.md  UI-ORCHESTRATION-REDESIGN.md  WAVE31-ACCEPTANCE.md
docs/i18n/: README.md  README_EN.md  STRING-CATALOG.md
docs/mockups/: p2-refinements-r2.html  p2-refinements.html  p3-workbench-r2.html  p3-workbench.html  v4-glass-home.html  v4-glass-workbench.html  vnext-home.html  vnext-mission.html
docs/optimization-plan/: 01-ui-modernization.md  02-steer.md  03-tools-mcp.md  04-prompts-workflow.md  05-other-directions.md  README.md
mcp/: README.md  README_EN.md
mcp/ai-computer-control/: README.md  pyproject.toml  requirements_offline.txt
mcp/ai-computer-control/installer/: APPLY-PYTHON-UPDATE.md  build_offline_package.py  install.bat  install.py  mcp_config_template.json  update.bat
mcp/ai-computer-control/scripts/: render_samples.py
mcp/ai-computer-control/src/ai_computer_control/: __init__.py  __main__.py  paths.py  server.py
mcp/ai-computer-control/src/ai_computer_control/tools/: __init__.py  act_and_verify.py  application.py  audio.py  audit.py  batch.py  browser.py  capture.py  clipboard.py  desktop_extra.py  diagnostics.py  dialog.py  document.py  editing.py  filesystem.py  image_tools.py  keyboard.py  memory.py  mouse.py  observe.py  ocr.py  office_chart.py  office_excel.py  office_pptx.py  office_read.py  office_style.py  record.py  safety.py  screen.py  shell.py  sync.py  system.py  thinking.py  uia.py  vision.py  web_fetch.py  window.py
mcp/ai-computer-control/src/ai_computer_control/utils/: image.py
mcp/ai-computer-control/tests/: run_all.py  smoke_async_contracts.py  smoke_descriptions.py  smoke_registry.py  smoke_stdio.py  smoke_toolsets.py  smoke_v13.py  smoke_v15.py  smoke_v16.py  smoke_v161.py  smoke_v17.py  smoke_v171.py  smoke_v18.py  smoke_v183.py  smoke_v19.py
ruyi-workbench/: README-START-HERE.txt  README.md  Start-Workbench.cmd  package-lock.json  package.json
ruyi-workbench/app/: build.js  server.js
ruyi-workbench/config/: example.claude-settings.json  example.mcp.json  workbench.defaults.json
ruyi-workbench/docs/: ARCHITECTURE_CN.md  ARCHITECTURE_EN.md  MODEL-WORKFLOW-SPEC_CN.md  MODEL-WORKFLOW-SPEC_EN.md  (+6 more)
(+99 files in other folders)
