[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-computer-control"
version = "1.8.2"
description = "MCP Server for AI computer control - offline deployable toolkit"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pywin32>=306",
    "psutil>=5.9.0",
    "playwright>=1.40.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "pyperclip>=1.8.0",
    "uiautomation>=2.0.18",
    "comtypes>=1.2.0",
    "python-pptx>=0.6.23",
    "matplotlib>=3.8.0",
]

[project.scripts]
ai-computer-control = "ai_computer_control.server:main"

[tool.setuptools.packages.find]
where = ["src"]
